--- a/Shespeaks page.html
+++ b/Shespeaks page.html
@@ -35,7 +35,7 @@
             <a href="file:///Users/aubrey/Downloads/About%20me%20page.html" class="navbar__links" id="about-page">About Me</a>
           </li>
           <li class="navbar__btn">
-            <a href="file:///Users/aubrey/Downloads/CGS%20final.html#sign-up" class="button" id="signup">Home</a>
+            <a href="index.html" class="button" id="signup">Home</a>
           </li>
         </ul>
       </div>
